--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "papaparse": "^5.5.2",
+    "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
