--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.7",
     "@types/papaparse": "^5.3.15",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "firebase": "^11.4.0",
     "papaparse": "^5.5.2",
     "recharts": "^2.15.1"
