--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@types/papaparse": "^5.3.15",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "firebase": "^11.4.0",
     "papaparse": "^5.5.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
